Texto correcto para ligas rapidas en PQR, Soldador certificacion y WPS

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
@@ -9,13 +9,13 @@
 
 @section breadcrumb {
     <li>
-        <a href="@Url.Action("landing", "Home")">Catálogos</a>
+        <a href="@Url.Action("landing", "Home")"><span id="lblInicio"></span></a>
     </li>
     <li>
-        <a href="#">Soldador Certificación</a>
+        <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("listadsoldadorcertificacion", "soldadorcertificacion")"><span id="SoldadoCertificacion"></span></a>
+        <a href="@Url.Action("listadsoldadorcertificacion", "soldadorcertificacion")"><span id="lblSoldadorCertificacion"></span></a>
     </li>
 }
 
