--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
@@ -10,10 +10,10 @@
         <a href="@Url.Action("landing", "Home")"><span id="lblInicio"></span></a>
     </li>
     <li>
-        <a href="#">Soldadura</a>
+        <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("PQR", "PQR")"><span id="">Pqr </span></a>
+        <a href="@Url.Action("PQR", "PQR")"><span id="lblPQRNavegacion"></span></a>
     </li>
 }
 
