--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
@@ -83,11 +83,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesoRellenorDiV">
+                <div class="col-sm-6 col-md-6 col-lg-4" id="PQREspesoRellenorDiV">
                     <label id="lblPQREspesorRelleno"></label>
-                    <input type="text" id="EspesorRelleno" class="form-control" />
+                    <input id="EspesorRelleno"/>
                 </div>
-                <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRellenoDiv">
+                <div class="col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRellenoDiv">
                     <label id="lblPQRProcesoSoldaduraRelleno"></label>
                     <input id="ProcesoSoldaduraRellenoID" class="" />
                 </div>
@@ -96,13 +96,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesorRaizDiV">
+                <div class="col-sm-6 col-md-6 col-lg-4" id="PQREspesorRaizDiV">
                     <label id="lblPQREspesorRaiz"></label>
-                    <input type="text" id="EspesorRaiz" class="form-control" />
+                    <input id="EspesorRaiz"/>
                 </div>
-                <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRaizDiv">
+                <div class="col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRaizDiv">
                     <label id="lblPQRProcesoSoldaduraRaiz"></label>
-                    <input id="ProcesoSoldaduraRaizID" class="" />
+                    <input id="ProcesoSoldaduraRaizID"/>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <label id="">&nbsp;</label>
