--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
@@ -40,7 +40,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
                 <div id="ArmadoSoldaduraDivSuperior" class="button-section">
-                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("PQR","PQR")" class="btn btn-primary"><span id="menuPQR"></span></a>
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("ListadoSoldadoresCertificacion", "soldadorcertificacion")" class="btn btn-primary"><span id="lblSoldadorCertificacion"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
@@ -174,7 +174,7 @@
                     <a id="btnCancelar1" class="btn btn-black"><span id="botonCancelar1"></span></a>
                 </div>
                 <div id="ArmadoSoldaduraDivSuperior" class="button-section">
-                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action(" PQR","PQR")" class="btn btn-primary"><span id="menuPQR1"></span></a>
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("ListadoSoldadoresCertificacion", "soldadorcertificacion")" class="btn btn-primary"><span id="lblSoldadorCertificacion2"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
