--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
@@ -29,7 +29,8 @@
                             <span class="caretWhite"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" id="btnGuardar"><span id="botonGuardar2"></span></a></li>
+                            <li><a href="#" id="btnGuardar" class="accionGuardar"><span id="botonGuardar2"></span></a></li>
+
                         </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
@@ -76,7 +77,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li><a href="#" id="btnGuardar1" class="accionGuardar"><span id="botonGuardar4"></span></a></li>
-                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo"></span></a></li>
+
                         </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="CapturaSoldaduraCancelar"></span></a>
@@ -101,20 +102,19 @@
 </div>
 
 @*<div id="windowPQR" style="display: none; z-index:inherit;">
-    @Html.Partial("~/Views/EditaPQR/_EditaPQR.cshtml")
-</div>*@
+        @Html.Partial("~/Views/EditaPQR/_EditaPQR.cshtml")
+    </div>*@
 
+<script src="~/Scripts/AppComponents/PQR/Listado/Ajax.js"></script>
+<script src="~/Scripts/AppComponents/PQR/Listado/Handlers.js"></script>
+<script src="~/Scripts/AppComponents/PQR/Listado/PQR.js"></script>
+<script src="~/Scripts/AppComponents/PQR/Listado/Render.js"></script>
 
-
-<script src="~/Scripts/AppComponents/Catalogos/PQR/Ajax.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/PQR/Handlers.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/PQR/PQR.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/PQR/Render.js"></script>
 
 
 @*@section JavascriptDocumentReadyFunctions {
-    $authorizationModel["Edita PQR"] = $PqrSaveModel;
-}*@
+        $authorizationModel["Edita PQR"] = $PqrSaveModel;
+    }*@
 
 
 
