Correcciones de ligas en PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
@@ -11,7 +11,7 @@
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("CrearPQR", "PQR")"><span id="lblCrearPQRNavegacion"></span></a>
+        <a href="@Url.Action("ListadoPQR", "CatalogoPQR")"><span id="lblCrearPQRNavegacion"></span></a>
     </li>
 }
 
@@ -34,7 +34,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
                 <div id="ArmadoSoldaduraDivSuperior" class="button-section">
-                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("PQR","PQR")" class="btn btn-primary"><span id="menuPQR"></span></a>
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("ListadoPQR","CatalogoPQR")" class="btn btn-primary"><span id="menuPQR"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
