--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
@@ -57,7 +57,7 @@
             <label>&nbsp;</label>
         </div>
         <div class="button-section col-sm-1 col-md-1 col-lg-1">
-            <a id="AAgregarPQR" href="@Url.Action("CrearPQR","PQR")" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></a>
+            <a id="AAgregarPQR" href="@Url.Action("CrearNuevoPQR", "CatalogoPQR")" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></a>
         </div>
         <div id="ContenedorGridPopUp" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
