Mensajes de error al crear nuevos SC

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
@@ -96,7 +96,7 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4" id="SCCedulaDiv">
                 <label id="lblCedulaTuboPQR"></label>
-                <input id="inputCedulaTuboPQR" class="form-control general-input" />
+                <input id="inputCedulaTuboPQR"/>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12" id="SCTipoPruebaDiv">
                 <label id="">&nbsp;</label>
