Correccion para no seleccionar Relleno y raiz si tiene N/A

--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/overrides.css
@@ -1204,3 +1204,10 @@ button[data-bind="visible:operatorVisible"] {
 .k-filter-row *{
     box-sizing:border-box !important;
 }
+
+
+.k-grid .ra,
+.k-numerictextbox .k-input
+{
+    text-align: right;
+}
