--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
@@ -11,7 +11,7 @@
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("ListadoPQR", "CatalogoPQR")"><span id="lblCrearPQRNavegacion"></span></a>
+        <a href="@Url.Action("CrearNuevoPQR", "CatalogoPQR")"><span id="lblCrearPQRNavegacion"></span></a>
     </li>
 }
 
