--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
@@ -105,7 +105,7 @@
 <script src="~/Scripts/AppComponents/WPS/Listado/Handlers.js"></script>
 <script src="~/Scripts/AppComponents/WPS/Listado/Render.js"></script>
 <script src="~/Scripts/AppComponents/WPS/Listado/WPS.js"></script>
-
+<script src="~/Scripts/AppComponents/WPS/Listado/Seguridad.js"></script>
 
 <script>
     @section JavascriptDocumentReadyFunctions {
