Cambios en Generar Requisicion para traer el TIpo de Prueba de las requisiciones, Correcciones en Armado y primeros cambios en Asignar Requisicion

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
@@ -97,7 +97,7 @@
             <label id="CapturaArmadoHeaderTaller"></label>
             <input id="inputTaller" class="" />
         </div>
-        <div class="col-sm-2 col-md-2 col-lg-2">
+        <div class="col-sm-2 col-md-2 col-lg-2" id="divLlenadoMasivo">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style="width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style="width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
