Correcciones en Soldador Certificacion y Etiquetas, y se agregan vistas de PND de Entrega Placas, Requisiciones Asignadas y Validacion RT

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/RequisicionesAsignadas.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/RequisicionesAsignadas.cshtml
@@ -9,7 +9,7 @@
         <a href="#"><span id="ServiciosTecnicosHeader"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("RequisicionesAsignadas", "ServiciosTecnicos")"><span id="RequisicionesAsignadas"></span></a>
+        <a href="@Url.Action("RequisicionesAsignadas", "PND")"><span id="RequisicionesAsignadas"></span></a>
     </li>
 }
 
