--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
@@ -15,6 +15,9 @@
     <li>
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
+    <li>
+        <a href="@Url.Action("ListadoSoldadoresCertificacion", "soldadorcertificacion")"><span id="lblSoldadorCertificacion2"></span></a>
+    </li>
     <li class="active">
         <a href="@Url.Action("AgregarNuevoSoldadorCertificacion", "SoldadorCertificacion")"><span id="lblNewSoldadorCertificacion"></span></a>
     </li>
@@ -96,7 +99,7 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4" id="SCCedulaDiv">
                 <label id="lblCedulaTuboPQR"></label>
-                <input id="inputCedulaTuboPQR"/>
+                <input id="inputCedulaTuboPQR" />
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12" id="SCTipoPruebaDiv">
                 <label id="">&nbsp;</label>
