Se agrega validación de PNDs y las vistas de PNDs

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/ImpresionPruebas.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/ServiciosTecnicos/ImpresionPruebas.cshtml
@@ -10,7 +10,7 @@
         <a href="#"><span id="ServiciosTecnicosHeader"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("ImpresionPruebas", "ServiciosTecnicos")"><span id="lblImpresionPruebas"></span></a>
+        <a href="@Url.Action("ImpresionPruebas", "PND")"><span id="lblImpresionPruebas"></span></a>
     </li>
 }
 <div id="FormImpresionPruebas" class="form clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="~/Scripts/AppComponents/ServiciosTecnicos/ImpresionPruebas/Ajax.js"> </script>
-<script type="text/javascript" src="~/Scripts/AppComponents/ServiciosTecnicos/ImpresionPruebas/Handlers.js"> </script>
-<script type="text/javascript" src="~/Scripts/AppComponents/ServiciosTecnicos/ImpresionPruebas/Render.js"> </script>
-<script type="text/javascript" src="~/Scripts/AppComponents/ServiciosTecnicos/ImpresionPruebas/Captura.js"> </script>
+<script type="text/javascript" src="~/Scripts/AppComponents/PND/ImpresionPruebas/Ajax.js"> </script>
+<script type="text/javascript" src="~/Scripts/AppComponents/PND/ImpresionPruebas/Handlers.js"> </script>
+<script type="text/javascript" src="~/Scripts/AppComponents/PND/ImpresionPruebas/Render.js"> </script>
+<script type="text/javascript" src="~/Scripts/AppComponents/PND/ImpresionPruebas/Captura.js"> </script>
