--- a/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Content/Styles/entities.css
@@ -947,6 +947,13 @@ header .menu > div {
     border-bottom: 1px solid #CCCCCC;
     background-color: #F8F8F8;
 }
+.addedSectionInLineWithoutColor {
+    margin: 20px 0;
+    padding-top: 31px;
+    padding-bottom: 20px;
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+}
 
 .addedSectionInLineCatalogos {
     padding-top: 10px!important;
