--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -34,7 +34,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
                 <div id="RequisicionDiv" class="button-section">
-                    <a id="Requisicion" href=@Url.Action("GenerarRequisicion","ServiciosTecnicos") class="btn btn-primary"><span id="MensajeRequisicion"></span></a>
+                    <a id="Requisicion" href=@Url.Action("RequisicionPND","PND") class="btn btn-primary"><span id="MensajeRequisicion"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
@@ -64,11 +64,9 @@
             <label id="DimensionalVisualHeaderSpoolID"></label><input type="hidden" id="InspeccionDimensionalID" />
             <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
         </div>
-        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
-            <label id="DimensionalVisualHeaderResultadoDimesional"></label>
-            <input type="radio" name="ResultadoDimensional" style="width:auto;" id="ResultadoDimensional" value="Aprobado" /><span id="DimensionalVisualAporbadoDimensional"></span>
-            <input type="radio" name="ResultadoDimensional" style="width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoDimensional"></span>
-
+        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-1 altoControl" id="listaJuntasDiv">
+            <label id="DimensionalVisualHeaderListaJUnta"></label>
+            <input id="ListaJuntas" />
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 altoControl" id="inputDefectoDiv">
             <label id="DimensionalVisualHeaderDefectoDimesional"></label>
@@ -82,19 +80,19 @@
             <label id="DimensionalVisualHeaderFechaDimesional"></label>
             <input id="FechaInspeccion" />
         </div>
-
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-1 altoControl">
-            <label id="">&nbsp;</label>
-            <button type="button" id="btnAgregar" class="btn btn-blue"><span id="botonAgregar"></span></button>
+        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
+            <label id="DimensionalVisualHeaderResultadoDimesional"></label>
+            <input type="radio" name="ResultadoDimensional" style="width:auto;" id="ResultadoDimensional" value="Aprobado" /><span id="DimensionalVisualAporbadoDimensional"></span>
+            <input type="radio" name="ResultadoDimensional" style="width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoDimensional"></span>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-2" id="MuestraDiv">
+        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-10" id="MuestraDiv">
             <label id="lblMostrar"></label>
             <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" /><span id="CapturaArmadSinCaptura"></span>
             <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos"> </span>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-2 altoControl" id="listaJuntasDiv">
-            <label id="DimensionalVisualHeaderListaJUnta"></label>
-            <input id="ListaJuntas" />
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-1 altoControl">
+            <label id="">&nbsp;</label>
+            <button type="button" id="btnAgregar" class="btn btn-blue"><span id="botonAgregar"></span></button>
         </div>
     </div>
 
@@ -106,11 +104,6 @@
         <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2 altoControl" id="inputTallerDiv">
             <label id="DimensionalVisualHeadeTaller"></label>
             <input id="inputTaller" class="" />
-        </div>
-        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
-            <label id="DimensionalVisualHeaderResultadoVisual"></label>
-            <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
-            <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 altoControl" id="inputDefectosVisualDiv">
             <label id="DimensionalVisualHeaderDefectoVisual"></label>
@@ -125,21 +118,25 @@
             <label id="DimensionalVisualHeaderFechaVisual"></label>
             <input id="inputFechaVisual" class="" />
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl">
-            <label id="">&nbsp;</label>
-            <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
+        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
+            <label id="DimensionalVisualHeaderResultadoVisual"></label>
+            <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
+            <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
         </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-12 altoControl">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-10 altoControl">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
-
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl">
+            <label id="">&nbsp;</label>
+            <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
         </div>
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
             </div>
         </div>
+
         <input id="hdAccionFiltrado" type="hidden" />
     </div>
 
