--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -64,13 +64,13 @@
             <label id="DimensionalVisualHeaderSpoolID"></label><input type="hidden" id="InspeccionDimensionalID" />
             <input style="width:40%" id="InputOrdenTrabajo" class="item-select" />-<input id="InputID" placeholder="ID" style="width:40%;" />
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-1 altoControl" id="listaJuntasDiv">
-            <label id="DimensionalVisualHeaderListaJUnta"></label>
-            <input id="ListaJuntas" />
-        </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 altoControl" id="inputDefectoDiv">
             <label id="DimensionalVisualHeaderDefectoDimesional"></label>
             <input id="inputDefecto" class="" />
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-1 altoControl" id="listaJuntasDiv">
+            <label id="DimensionalVisualHeaderListaJUnta"></label>
+            <input id="ListaJuntas" />
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2 altoControl" id="inputInspectorDiv">
             <label id="DimensionalVisualHeaderInspectorDimesional"></label>
@@ -83,7 +83,7 @@
         <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
             <label id="DimensionalVisualHeaderResultadoDimesional"></label>
             <input type="radio" name="ResultadoDimensional" style="width:auto;" id="ResultadoDimensional" value="Aprobado" /><span id="DimensionalVisualAporbadoDimensional"></span>
-            <input type="radio" name="ResultadoDimensional" style="width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoDimensional"></span>
+            <input type="radio" name="ResultadoDimensional" style="width:auto;" value="Rechazado" /><span id="DimensionalVisualRechazadoDimensional"></span>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-10" id="MuestraDiv">
             <label id="lblMostrar"></label>
