Coreeciones en Dimensional

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Armado/CapturaArmado.cshtml
@@ -75,8 +75,8 @@
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2" id="MuestraDiv">
             <label id="CapturaArmadoHeaderMostrar"></label>
-            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" /><span id="CapturaArmadSinCaptura"></span>&nbsp;&nbsp;
-            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos"> </span>
+            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" />&nbsp;<span id="CapturaArmadSinCaptura"></span>&nbsp;&nbsp;
+            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" />&nbsp;<span id="CapturaArmadoTodos"> </span>
 
         </div>
         <div class="col-sm-1 col-md-1 col-lg-1">
@@ -104,8 +104,8 @@
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2" id="divLlenadoMasivo">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
-            <input type="radio" name="LLena" style="width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>&nbsp;&nbsp;
-            <input type="radio" name="LLena" style="width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
+            <input type="radio" name="LLena" style="width:auto;" value="Todos" />&nbsp;<span id="CapturaArmadoTodos2"></span>&nbsp;&nbsp;
+            <input type="radio" name="LLena" style="width:auto;" value="Vacios" />&nbsp;<span id="CapturaArmadoVacios"></span>
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2">
             <label id="">&nbsp;</label>
