Correcciones de deisño en Inspeccion Dimensional

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
@@ -60,8 +60,8 @@
         </div>
         <div class="col-sm-3 col-md-3 col-lg-3" id="MuestraDiv" style="display: block;">
             <label id="CapturaArmadoHeaderMostrar"></label>
-            <input type="radio" name="Muestra" style="width:auto;" value="Sin Capturar"><span id="CapturaArmadSinCaptura"></span>&nbsp;
-            <input type="radio" name="Muestra" style="width:auto;" value="Todos"><span id="CapturaArmadoTodos">Todos</span>
+            <input type="radio" name="Muestra" style="width:auto;" value="Sin Capturar">&nbsp;<span id="CapturaArmadSinCaptura"></span>&nbsp;
+            <input type="radio" name="Muestra" style="width:auto;" value="Todos">&nbsp;<span id="CapturaArmadoTodos"></span>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-3 col-lg-2">
             <label id="">&nbsp;</label>
@@ -73,7 +73,7 @@
     <div class="row addedSectionInLine">
         <div class="col-sm-6 col-md-4 col-lg-2">
             <label id="DimensionalVisualHeaderResultadoDimesional"></label>
-            <input type="radio" name="ResultadoDimensional" id="ResultadoDimensionalAprobado" style=" width:auto;" value="Aprobado" />&nbsp;<span id="DimensionalVisualAporbadoDimensional"></span>&nbsp;&nbsp;
+            <input type="radio" name="ResultadoDimensional" id="ResultadoDimensionalAprobado" style=" width:auto;" value="Aprobado" />&nbsp;<span id="DimensionalVisualAporbadoDimensional"></span>&nbsp;
             <input type="radio" name="ResultadoDimensional" id="ResultadoDimensionalRechazado" style=" width:auto;" value="Rechazado" />&nbsp;<span id="DimensionalVisualRechazadoDimensional"> </span>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-2" id="inputDefectoDiv">
