--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
@@ -48,37 +48,35 @@
         </div>
     </div>
     @*Controles Superior*@
-    <div id="FieldSetView">
-        <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-3">
-                <label id="CapturaHeaderMostrar"></label>
-                <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" /><span id="CapturaSinAsinar"></span>
-                <input type="radio" name="Muestra" style=" width:auto;" value="Todos" /><span id="CapturaTodos"> </span>
+    <div id="FieldSetView" class="row addedSectionInLineWithoutColor">
 
-            </div>
-            <div class="col-sm-2 col-md-2 col-lg-2">
-                <label id="AsignarRequisicionHeaderPrueba"></label>
-                <input id="inputPrueba" class="" />
-            </div>
-            
+        <div class="col-sm-2 col-md-2 col-lg-2">
+            <label id="CapturaHeaderMostrar"></label>
+            <input type="radio" name="Muestra" style=" width:auto;" value="Sin Capturar" />&nbsp;<span id="CapturaSinAsinar"></span>&nbsp;
+            <input type="radio" name="Muestra" style=" width:auto;" value="Todos" />&nbsp;<span id="CapturaTodos"> </span>
+
         </div>
+        <div class="col-sm-2 col-md-2 col-lg-2">
+            <label id="AsignarRequisicionHeaderPrueba"></label>
+            <input id="inputPrueba" class="" />
+        </div>
+
+
     </div>
     @*GRID*@
     <div class="row addedSectionInLine">
+
+        <div class="col-sm-3 col-md-3 col-lg-3">
+            <label id="AsignarRequisicionHeaderProveedor"></label>
+            <input id="inputProveedor" class="" />
+        </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="col-sm-3 col-md-3 col-lg-3">
-                    <label id="AsignarRequisicionHeaderProveedor"></label>
-                    <input id="inputProveedor" class="" />
+            <div id="ContenedorGrid" class="row">
+                <div id="grid" data-role="grid" class="k-grid k-widget">
                 </div>
+                <input id="hdAccionFiltrado" type="hidden" />
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div id="ContenedorGrid" class="row">
-                    <div id="grid" data-role="grid" class="k-grid k-widget">
-                    </div>
-                    <input id="hdAccionFiltrado" type="hidden" />
-                </div>
-            </div>
+
         </div>
     </div>
     @*GRID*@
