--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/Dimensional.cshtml
@@ -71,7 +71,7 @@
     </div>
     @*GRID*@
     <div class="row addedSectionInLine">
-        <div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2" id="DivResultadoDimensionalRadio">
             <label id="DimensionalVisualHeaderResultadoDimesional"></label>
             <input type="radio" name="ResultadoDimensional" id="ResultadoDimensionalAprobado" style=" width:auto;" value="Aprobado" />&nbsp;<span id="DimensionalVisualAporbadoDimensional"></span>&nbsp;
             <input type="radio" name="ResultadoDimensional" id="ResultadoDimensionalRechazado" style=" width:auto;" value="Rechazado" />&nbsp;<span id="DimensionalVisualRechazadoDimensional"> </span>
@@ -88,7 +88,7 @@
             <label id="DimensionalVisualHeaderFechaDimesional"></label>
             <input id="FechaInspeccion"/>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2" id="DivLlenadoMasivoRadio">
             <label id="CapturaLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto" value="Todos" />&nbsp;<span id="CapturaLlenadoMasivoTodos"></span>&nbsp;
             <input type="radio" name="LLena" style=" width:auto" value="Vacios" />&nbsp;<span id="CapturaLlenadoMasivoVacios"></span>
