Correcciones en Visual Dimensional

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
@@ -10,7 +10,7 @@
         <a href="#"><span id="ServiciosTecnicosHeader"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("AsignarRequisicion", "ServiciosTecnicos")"><span id="AsignarRequisicion"></span></a>
+        <a href="@Url.Action("AsignacionRequisicion", "PND")"><span id="AsignarRequisicion"></span></a>
     </li>
 }
 <div id="FormAsignarRequisicion" class="form clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -32,7 +32,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
                 <div id="EntregaresultadosDivSup" class="button-section">
-                    <a id="EntregaresultadosSup" href="@Url.Action("EntregaResultados", "ServiciosTecnicos")" class="btn btn-primary"><span id="AsignarRequisicionEntregaResultados"></span></a>
+                    <a id="EntregaresultadosSup" href="@Url.Action("EntregaPlacasGraficas", "PND")" class="btn btn-primary"><span id="AsignarRequisicionEntregaResultados"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
@@ -98,7 +98,7 @@
                     <a id="btnCancelar" class="btn btn-black"><span id="CapturaSoldaduraCancelar"></span></a>
                 </div>
                 <div id="EntregaresultadosDivINF" class="button-section">
-                    <a id="EntregaresultadosINF" href="#" class="btn btn-primary"><span id="AsignarRequisicionEntregaResultados2"></span></a>
+                    <a id="EntregaresultadosINF" href="@Url.Action("EntregaPlacasGraficas", "PND")" class="btn btn-primary"><span id="AsignarRequisicionEntregaResultados2"></span></a>
                 </div>
                 <div class="button-section actionButtonSection">
                     <div class="dropdown action-group">
