Guardar y Nuevo Evento en Visual Dimensional

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -114,12 +114,12 @@
             <label id="DimensionalVisualHeaderFechaVisual"></label>
             <input id="inputFechaVisual" class="" />
         </div>
-        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl">
+        <div class="col-xs-12 col-sm-8 col-md-3 col-lg-2 altoControl" id="ResultadoVisualRadio">
             <label id="DimensionalVisualHeaderResultadoVisual"></label>
             <input type="radio" name="ResultadoVisual" id="ResultadoVisual" style=" width:auto;" value="Aprobado" /><span id="DimensionalVisualAporbadoVisual"> </span>
             <input type="radio" name="ResultadoVisual" style=" width:auto;" value="Rechazdo" /><span id="DimensionalVisualRechazadoVisual"> </span>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-10 altoControl">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-10 altoControl" id="ResultadoLlenadoMasivoRadio">
             <label id="CapturaArmadoHeaderLlenadoMasivo"></label>
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
