Cambio de orientacion de elementos numericos sobre el grid

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Inspeccion/VisualDimensional.cshtml
@@ -124,7 +124,7 @@
             <input type="radio" name="LLena" style=" width:auto;" value="Todos" /><span id="CapturaArmadoTodos2"></span>
             <input type="radio" name="LLena" style=" width:auto;" value="Vacios" /><span id="CapturaArmadoVacios"></span>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-1 altoControl" id="divAplicarCapturaRapida">
             <label id="">&nbsp;</label>
             <button type="button" id="btnAplicarCapturaRapida" class="btn btn-blue"><span id="botonAplicar"></span></button>
         </div>
