--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-sm-3 col-md-3 col-lg-2" id="divCodigo">
                         <label id="PinturaCargaCodigo"></label>
-                        <input id="inputCodigo" />
+                        <input id="inputCodigo" class="general-input"/>
                     </div>
                     <div class="col-sm-2 col-md-2 col-lg-2" id="">
                         <label id="">&nbsp;</label>
