Soldadura , Soldador Certificacion y WPS cambio en soldador certificacion de pqr a wps.

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
@@ -66,9 +66,9 @@
                 <label id="lblSoldador"> </label>
                 <input type="text" id="inputSoldador" />
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-4" id="SCNombrePQRDiv">
-                <label id="lblNombrePQR"></label>
-                <input id="inputNombrePQR" />
+            <div class="col-sm-6 col-md-6 col-lg-4" id="SCNombreWPSDiv">
+                <label id="lblNombreWPS"></label>
+                <input id="inputNombreWPS" />
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12" id="SCTipoPruebaDiv">
                 <label id="">&nbsp;</label>
