Cambios de Visual Dimensional y PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/CrearNuevoPQR.cshtml
@@ -11,7 +11,7 @@
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li >
-        <a href="@Url.Action("PQR", "PQR")"><span id="lblPQRNavegacion"></span></a>
+        <a href="@Url.Action("ListadoPQR", "CatalogoPQR")"><span id="menuPQR1"></span></a>
     </li>
     <li class="active">
         <a href="@Url.Action("CrearNuevoPQR", "CatalogoPQR")"><span id="lblCrearPQRNavegacion"></span></a>
