--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/CatalogoPQR/ListadoPQR.cshtml
@@ -13,7 +13,7 @@
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
     <li class="active">
-        <a href="@Url.Action("PQR", "PQR")"><span id="lblPQRNavegacion"></span></a>
+        <a href="@Url.Action("ListadoPQR", "CatalogoPQR")"><span id="menuPQR1"></span></a>
     </li>
 }
 
