--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
@@ -11,6 +11,9 @@
     <li>
         <a href="#"><span id="SoldadorCertificacionConfiguracionSoldadura"></span></a>
     </li>
+    <li>
+        <a href="@Url.Action("WPS", "WPS")"><label id="menuWPS"></label></a>
+    </li>
     <li class="active">
         <a href="@Url.Action("crearWPS", "WPS")"><span id="WPSNuevoLabelNavegacion"></span></a>
     </li>
