--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
@@ -66,12 +66,8 @@
     @*GRID*@
     <div class="row addedSectionInLine">
 
-        <div class="col-sm-3 col-md-3 col-lg-3">
-            <label id="AsignarRequisicionHeaderProveedor"></label>
-            <input id="inputProveedor" class="" />
-        </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div id="ContenedorGrid" class="row">
+            <div id="ContenedorGrid" >
                 <div id="grid" data-role="grid" class="k-grid k-widget">
                 </div>
                 <input id="hdAccionFiltrado" type="hidden" />
