--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/AgregarNuevoSoldadorCertificacion.cshtml
@@ -36,8 +36,8 @@
                             <span class="caretWhite"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" id="btnGuardar"><span id="botonGuardar2" class="accionGuardar"></span></a></li>
-                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo" class="accionGuardarYNuevo"></span></a></li>
+                            <li><a href="#" id="btnGuardar" class="accionGuardar"><span id="botonGuardar2" ></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo" class="accionGuardarYNuevo"><span id="botonGuardarYNuevo" ></span></a></li>
                         </ul>
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
@@ -170,8 +170,8 @@
                             <span class="caretWhite"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#" id="btnGuardarPie"><span id="btnGuardarPiePagina" class="accionGuardar"></span></a></li>
-                            <li><a href="#" id="btnGuardarYNuevoPie"><span id="btnGuardarYNuevoPiePagina" class="accionGuardarYNuevo"></span></a></li>
+                            <li><a href="#" id="btnGuardarPie" class="accionGuardar"><span id="btnGuardarPiePagina" ></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevoPie" class="accionGuardarYNuevo"><span id="btnGuardarYNuevoPiePagina" ></span></a></li>
                         </ul>
                     </div>
                     <a id="btnCancelar1" class="btn btn-black"><span id="botonCancelar1"></span></a>
