--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/AsignacionRequisicion.cshtml
@@ -77,6 +77,26 @@
     </div>
     @*GRID*@
 
+    @*GRID POPUP*@
+    <div id="windowGrid" style="display: none; z-index:inherit;">
+        
+            <div class="row col-sm-12 col-md-12 col-lg-12" style="width: 100%; padding-right:20px;">
+                <div class="form-group">
+                    <div id="ContenedorGridPopUp">
+                        <div id="gridPopUp" data-role="grid" class="k-grid k-widget">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <div class="row col-sm-12 col-md-12 col-lg-12">
+            <div class="col-sm-5 col-md-5 col-lg-5"></div>
+            <a class=" btn btn-primary col-sm-1 col-md-1 col-lg-1" href="#" id="CerrarDetalleJunta">
+                <span id="BotonCerrar1"></span>
+            </a>
+        </div>
+        
+    </div>
+
     <div class="row ">
         <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="formNav clearfix">
