--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/CapturaReporteRT.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/CapturaReporteRT.cshtml
@@ -1,8 +1,4 @@
 ﻿
-@{
-    ViewBag.Title = "CapturaReporteRT";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
 @section breadcrumb {
     <li>
@@ -47,6 +43,19 @@
         </div>
     </div>
     @*Controles Superior*@
+    <div class="row">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <label id="AsignarRequisicionHeaderProveedor"></label>
+            <input id="inputProveedor"/>
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <label id="MensajeRequisicion"> </label>
+            <input id="inputRequisicion" />
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <label>&nbsp;</label>
+        </div>
+    </div>
     <div class="row">
         <input type="hidden" value=@ViewBag.RequisicionID id="RequisicionID" />
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
