--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/CapturaReporteRT.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PND/CapturaReporteRT.cshtml
@@ -71,8 +71,8 @@
             <span id="CapturaReportePruebasTurno"> </span><label id="TurnoLaboral"></label>
         </div>
     </div>
-    @*GRID*@
-    <div class="row addedSectionInLine">
+    @*GRID PARA RT*@
+    <div class="row addedSectionInLine" id="gridRT">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div id="ContenedorGrid" class="row">
@@ -81,7 +81,19 @@
                 </div>
             </div>
         </div>
-        <input id="hdAccionFiltrado" type="hidden" />
+        
+    </div>
+
+    @*GRID PARA CUALQUIERA MENOS RT*@
+    <div class="row addedSectionInLine" style="display:none;" id="gridNoRT">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div id="ContenedorGrid" class="row">
+                    <div id="grid" data-role="grid" nombre="noRT" class="k-grid k-widget">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     @*Menu Inferior*@
     <div class="row">
