--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Pintura/CargaCarro.cshtml
@@ -64,7 +64,7 @@
             <label id="ServiciosTecnicosProyecto"></label>
             <input id="inputProyecto" />
         </div>
-        <div class="col-sm-2 col-md-2 col-lg-3">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             <div id="tipoVista" class="btn-group " data-toggle="buttons" role="group">
                 <label>&nbsp;</label>
                 <div class="btn btn-primary" id="styleEscritorio">
